--- a/index.scss
+++ b/index.scss
@@ -10,7 +10,7 @@ $contentback: #f8f9fa;
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
   outline: none;
 }
 html {
@@ -26,8 +26,9 @@ main {
   height: 100vh;
   background: $background;
   display: grid;
-  grid-template-columns: 1fr minmax(30rem, 4.5fr);
-  grid-template-rows: 1fr;
+  grid-template-columns: 1fr 4fr;
+  height: 100vh;
+  overflow: hidden;
 }
 nav {
   background: $navback;
@@ -123,6 +124,8 @@ nav {
   }
 }
 .Content {
+  grid-row: 1/2;
+  grid-column: 2/3;
   &__whatido {
     background: $contentback;
     display: flex;
@@ -288,14 +291,12 @@ nav {
 
 @media only screen and (max-width: 700px) {
   main {
-    grid-template-columns: min-content 1fr;
+    grid-template-columns: min-content 90vw;
     grid-template-rows: 1fr;
     transition: 1s;
   }
   nav {
-    width: 15rem;
-    grid-row: 1/2;
-    grid-column: 1/2;
+    width: 10%;
     align-items: center;
     justify-content: space-between;
     padding: 2rem 0;
